--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 title: "alshin"
-markdown: rdiscount
+markdown: redcarpet
+redcarpet:
+    extensions: [ "fenced_code_blocks", "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
 highlighter: pygments
 github_username: yunshang
 baseurl: /blog
