--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,5 @@
 title: "alshin"
-markdown: redcarpet
-redcarpet:
-    extensions: [ "fenced_code_blocks", "hard_wrap","autolink", "tables", "strikethrough", "superscript", "with_toc_data", "highlight", "prettify","no_intra_emphasis"]
+markdown: kramdown
 highlighter: pygments
 github_username: yunshang
 baseurl: /blog
