--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ highlighter: pygments
 github_username: yunshang
 paginate: 10
 paginate_path: "page:num"
-baseurl: http://alshin.xyz
-#baseurl: /blog
+baseurl: http://alshin.xyz/
+#baseurl: /blog/
